--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,8 +17,19 @@
   <p class="pt-5"><%= @post.text %></p>
 </div>
 
+<div class="text-success">
+  <% flash.each do |name, msg| -%>
+  <%= content_tag :div, msg, class: name %>
+  <% end -%>
+</div>
+
 <div class="border border-1 p-2">
   <% @post.all_comments.each do |post| %>
-    <%= post.nil? ? "No comment" : user.name + " : " + post.text %>
+    <p><%= post.nil? ? "No comment" : user.name + " : " + post.text %></p>
   <% end %>
+</div>
+
+<div class="d-flex my-2">
+  <%= render partial: "likes/like_action", locals: { post: @post }, class: 'mx-4' %>
+  <%= link_to 'New Comment', new_user_post_comment_path(post_id: params[:id]), class: "mx-4 btn btn-primary" %>
 </div>
